# ML_templete

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
docker/: Dockerfile
notebooks/: 0618.ipynb  0729.ipynb  sample.ipynb
src/DCSBM/: DCSBM.py  DCSBM2.py  DCSBM_NW.py
src/myfunction/: eigen.py  make_polblogs_graph.py  umap_visualizer.py
